<resources>

    <string name="app_name">Metal Bands</string>

    <string name="search_title">Search title</string>

    <string name="search_hint">Search Bands</string>

    <string name="band_genre">Genre:</string>
    <string name="band_status">Status:</string>
    <string name="band_country">Country of origin:</string>
    <string name="band_lyrical_themes">Lyrical themes:</string>
    <string name="band_years_of_activity">Years active:</string>
    <string name="band_albums">Complete discography:</string>

</resources>
