<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dimen_8"
    android:orientation="vertical"
    tools:context="com.blacklane.mahmoudfaragallah.blacklane_task.band_details.BandDetailsScreen">

    <ImageView
        android:id="@+id/band_photo"
        android:layout_width="match_parent"
        android:layout_height="150dip"
        android:background="@drawable/band_photo_border"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/dimen_3"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_5"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/dimen_5"
            android:paddingStart="@dimen/dimen_5"
            android:text="@string/band_country"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/band_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/dimen_5"
            android:paddingStart="@dimen/dimen_5"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_5"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/dimen_5"
            android:paddingStart="@dimen/dimen_5"
            android:text="@string/band_status"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/band_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/dimen_5"
            android:paddingStart="@dimen/dimen_5"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_5"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/dimen_5"
            android:paddingStart="@dimen/dimen_5"
            android:text="@string/band_genre"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/band_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/dimen_5"
            android:paddingStart="@dimen/dimen_5"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_5"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/dimen_5"
            android:paddingStart="@dimen/dimen_5"
            android:text="@string/band_lyrical_themes"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/band_lyrical_themes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/dimen_5"
            android:paddingStart="@dimen/dimen_5"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_5"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/dimen_5"
            android:paddingStart="@dimen/dimen_5"
            android:text="@string/band_years_of_activity"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/band_years_of_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/dimen_5"
            android:paddingStart="@dimen/dimen_5"
            android:text="" />

    </LinearLayout>

</LinearLayout>